@@ -1902,6 +1902,13 @@ bool CEventSystem::parseBlocklyActions(const std::string &Actions, const std::st
 				variableNo = deviceName.substr(9);
 				deviceName = "0";
 			}
+			else if (deviceName.find("SendCamera:") == 0)
+			{
+				if (!atoi(deviceName.substr(11).c_str()))
+					return false;
+				ScheduleEvent(deviceName, doWhat, eventName);
+				return true;
+			}
 
 			int deviceNo = atoi(deviceName.c_str());
 			if (deviceNo && !isScene && !isVariable) {
@@ -3134,8 +3141,10 @@ void CEventSystem::WriteToLog(const std::string &devNameNoQuotes, const std::str
 
 bool CEventSystem::ScheduleEvent(std::string deviceName, const std::string &Action, const std::string &eventName)
 {
+	std::vector<std::vector<std::string> > result;
 	bool isScene = false;
 	int sceneType = 0;
+
 	if ((deviceName.find("Scene:") == 0) || (deviceName.find("Group:") == 0))
 	{
 		isScene = true;
@@ -3145,8 +3154,34 @@ bool CEventSystem::ScheduleEvent(std::string deviceName, const std::string &Acti
 		}
 		deviceName = deviceName.substr(6);
 	}
+	else if (deviceName.find("SendCamera:") == 0)
+	{
+		deviceName = deviceName.substr(11);
+		result = m_sql.safe_query("SELECT Name FROM Cameras WHERE (ID == '%q')", deviceName.c_str());
+		if (result.empty())
+			return false;
 
-	std::vector<std::vector<std::string> > result;
+		std::string cAction = Action;
+		int delay = 0;
+		size_t aFind = Action.find(" AFTER ");
+		if ((aFind > 0) && (aFind != std::string::npos)) {
+			std::string delayString = Action.substr(aFind + 7);
+			std::string newAction = Action.substr(0, aFind);
+			delay = atoi(delayString.c_str());
+			cAction = newAction;
+		}
+		StripQuotes(cAction);
+
+
+		std::string subject = cAction;
+		if (delay == 0)
+		{
+			m_mainworker.m_cameras.EmailCameraSnapshot(deviceName, subject);
+		}
+		else
+			m_sql.AddTaskItem(_tTaskItem::EmailCameraSnapshot(delay, deviceName, subject));
+		return true;
+	}
 
 	if (isScene) {
 		result = m_sql.safe_query("SELECT ID FROM Scenes WHERE (Name == '%q')",
